--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -1,19 +1,24 @@
 <ion-tabs>
 
-  <ion-tab-bar slot="bottom">
+  <ion-tab-bar color="netflix-dark" slot="bottom">
     <ion-tab-button tab="tab1">
-      <ion-icon name="triangle"></ion-icon>
-      <ion-label>Tab 1</ion-label>
+      <ion-icon name="home"></ion-icon>
+      <ion-label>Título</ion-label>
     </ion-tab-button>
 
     <ion-tab-button tab="tab2">
-      <ion-icon name="ellipse"></ion-icon>
-      <ion-label>Tab 2</ion-label>
+      <ion-icon name="search-outline"></ion-icon>
+      <ion-label>Buscar</ion-label>
     </ion-tab-button>
 
     <ion-tab-button tab="tab3">
-      <ion-icon name="square"></ion-icon>
-      <ion-label>Tab 3</ion-label>
+      <ion-icon name="videocam-outline"></ion-icon>
+      <ion-label>Vídeos</ion-label>
+    </ion-tab-button>
+    
+    <ion-tab-button tab="tab3">
+      <ion-icon name="add-circle-outline"></ion-icon>
+      <ion-label>Mais</ion-label>
     </ion-tab-button>
   </ion-tab-bar>
 
